# baby-finder

./: .gitignore  README.md
_model_prep/: __init__.py
_model_prep/scripts/: __init__.py  fastai_to_pytorch.py  onnx_to_tensorflow.sh  pytorch_to_onnx.py
_model_prep/tests/: test_onnx_model.py  test_pytorch_model.py  test_tensorflow_model.py
_model_prep/utils/: __init__.py  image_transform.py
_serverless_setup/: Dockerfile  local_test.py  pyproject.toml  samconfig.toml  template.yaml
_serverless_setup/app/: lambda_classify.py
aws-lambda/: env.json  event.json  template.yaml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  api.js  config.js  index.js
client/src/components/: PhotoDisplay.js
client/src/constants/: model.js
client/src/hooks/: useScript.js
client/src/utils/: googleAuth.js
python-server/: app.py  model.py
sam-test-no-admin/: README.md  env.json  local_test.py  template.yaml
sam-test-no-admin/.aws-sam/: build.toml
sam-test-no-admin/hello_world/: Dockerfile  app.py  requirements.txt
server/: auth.js  config.js  index.js  mockApiResponse.json  package-lock.json  package.json
serverless-test/: README.md  local_test.py  template.yaml
serverless-test/app/: app.py
