[tool.poetry]
name = "aws_lambdas_deploy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.6,<3.11"
numpy = "^1.21.5"
requests = "^2.26.0"
fastai = "^2.7.9"

[tool.poetry.dev-dependencies]
boto3 = "^1.20.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"